<resources>
    <string name="app_name">Datavizta</string>
    <string name="Icon_not_load">Icon_not_load</string>
    <string name="server_configuration">Server configuration</string>
    <string name="impact_visualisation">Impact visualisation</string>
    <string name="cpu">CPU</string>
    <string name="configScreenTitle">Server configuration</string>
    <string name="quantity">Quantity</string>
    <string name="core_units">Core units</string>
    <string name="tdp">TDP (Watt)</string>
    <string name="arch">Architecture</string>
    <string name="new_configuration">New configuration</string>
    <string name="ram">RAM</string>
    <string name="ssd">SSD</string>
    <string name="other">Other</string>
    <string name="next">Next</string>
    <string name="previus">Previus</string>
    <string name="capacity">Capacity (GB)</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="hdd_quantity">HDD quantity</string>
    <string name="serveur_type">Server type</string>
    <string name="psu_quantity">PSU quantity</string>
    <string name="usage">Usage</string>
    <string name="localisation">Localisation</string>
    <string name="lifespan">Lifespan (year)</string>
    <string name="average_consumption">Average consumption (W)</string>
    <string name="complete">Complete</string>
    <string name="abioticTitle">Abiotic depletion potential (kgSbeq)</string>
    <string name="greenhouseTitle">Global Warming Potential (kgCO2eq)</string>
    <string name="primaryEnergyTitle">Primary Energy (MJ)</string>
    <string name="resultUtilisation">Usage : </string>
    <string name="resultManufacture">Manufacturing : </string>
    <string name="resultManufactureRAM">Manufacturing RAM : </string>
    <string name="resultManufactureCPU">Manufacturing CPU : </string>
    <string name="resultManufactureSSD">Manufacturing SSD : </string>
    <string name="resultManufactureHDD">Manufacturing HDD : </string>
    <string name="resultManufactureOther">Manufacturing other : </string>
    <string name="time">Time (%)</string>
    <string name="load">Load (%)</string>
    <string name="slot_2_3">Slot 2/3</string>
    <string name="slot_1_3">Slot 1/3</string>
    <string name="slot_3_3">Slot 3/3</string>
</resources>