<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ram"
        android:textSize="45sp"
        android:fontFamily="@font/maven_pro"
        android:textFontWeight="500"
        android:textColor="?colorSecondary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CoreUnitsTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/capacity"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/quantityTextField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tdpTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/manufacturer"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/CoreUnitsTextField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>