<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/other"
        android:textSize="45sp"
        android:fontFamily="@font/maven_pro"
        android:textFontWeight="500"
        android:textColor="?colorSecondary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hddQuantityTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hdd_quantity"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serverTypeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/serveur_type"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/hddQuantityTextField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:labelFor="@id/serverTypeAutoCompleteTextView">

        <AutoCompleteTextView
            android:id="@+id/serverTypeAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/psuQuantityTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/psu_quantity"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/serverTypeTextField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>