<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="20dp">

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cpu"
            android:textSize="45sp"
            android:fontFamily="@font/maven_pro"
            android:textFontWeight="500"
            android:textColor="?colorSecondary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantityTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/subTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/coreUnitsTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/core_units"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/quantityTextField"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/coreUnitsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tdpTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tdp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/coreUnitsTextField"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tdpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ArchTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/arch"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tdpTextField"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:labelFor="@id/archAutoCompleteTextView">

            <AutoCompleteTextView
                android:id="@+id/archAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
